--- a/Task.html
+++ b/Task.html
@@ -91,12 +91,12 @@
       <input type="text" name="task" id="taskName1">
 
       <br>
-    <!-- Date input -->
+    <!--The user inputs their details of task-->
       <label for="dueDate">Due Date </label>
       <input type="date" name="dueDate" id="Date1">
       <br>
 
-
+    <!--Task Weighting-->
     <label for="weight">Weighting % </label>
     <select name="weight" id="Weighting">
       <option value="">%</option>
@@ -116,7 +116,7 @@
     </form>
   
   </div> 
-  <!-- Timer-->
+  <!-- Pomodoro Timer-->
  <div  class="containerp">  
     <div class="timer">
 
@@ -132,7 +132,7 @@
       
   
 
-<!-- All of the tasks -->
+<!-- All of the tasks, the user can add tasks on the left side to right side -->
 <div class="TaskList">
   <h6>Task List</h6>
   <ul id="tasklist2" class="Talist">
