--- a/Task.html
+++ b/Task.html
@@ -47,11 +47,6 @@
         </a>
       </li>
 
-      <li class="Night">
-        <a href="">
-        <span class="NavText">NightMode</span>
-        </a>
-       </li>
     </ul>
 </div>
 
@@ -100,14 +95,14 @@
     <label for="weight">Weighting % </label>
     <select name="weight" id="Weighting">
       <option value="">%</option>
-      <option value="50%">50%</option>
-      <option value="40%">40%</option>
-      <option value="30%">30%</option>
-      <option value="25%">25%</option>
-      <option value="20%">20%</option>
-      <option value="15%">15%</option>
-      <option value="10%">10%</option>
-      <option value="5%">5%</option>
+      <option value=" 50%">50%</option>
+      <option value=" 40%">40%</option>
+      <option value=" 30%">30%</option>
+      <option value=" 25%">25%</option>
+      <option value=" 20%">20%</option>
+      <option value=" 15%">15%</option>
+      <option value=" 10%">10%</option>
+      <option value=" 5%">5%</option>
     </select>
 
     <br>
@@ -118,6 +113,7 @@
   </div> 
   <!-- Pomodoro Timer-->
  <div  class="containerp">  
+  <h6 class="pomodo">Pomodoro</h6>   
     <div class="timer">
 
 <div class="buttonp">
